--- a/hackers-guild/src/routes/navigation/navigation.styles.scss
+++ b/hackers-guild/src/routes/navigation/navigation.styles.scss
@@ -1,8 +1,10 @@
 .navbar-container{
+  display: flex;
   width: 100%;
-  height: 5vh;
-  margin: 0 auto;
-  padding: 20px;
-  padding-left: 100px;
- 
+  height: 10vh;
+  align-items: center;
+
+  svg {
+    padding-left: 70px;
+  }
 }
