delete functionality added

--- a/hackers-guild/src/components/detailed-card/detailed-card.styles.scss
+++ b/hackers-guild/src/components/detailed-card/detailed-card.styles.scss
@@ -124,5 +124,79 @@
             }
         
         }
+    
     }
+    
+
+
+    .modal-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: white;
+        position: absolute;
+        left: 33%;
+        top: 30%;
+        border-radius: 1rem;
+        padding: 1rem;
+        padding-top: 0.5rem;
+        font-family: 'Poppins';
+    
+        .modal-content {
+            width: 90%;
+    
+            #modal-title {
+                font-size: 1.5rem;
+                font-weight: 700;
+                line-height: 2.1rem;
+                margin-bottom: 1rem;
+            }
+    
+            #modal-description {
+                font-size: 0.8rem;
+                font-weight: 500;
+                line-height: 1.5rem;
+                margin-bottom: 1rem;
+            }
+        }
+    
+        .modal-buttons {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: end;
+            gap: 1rem;
+            margin-top: 1rem;
+    
+            .modal-button {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding-left: 1rem;
+                padding-right: 1rem;
+                padding-top: 0.25rem;
+                padding-bottom: 0.25rem;
+                font-weight: 500;
+                font-size: large;
+                cursor: pointer;
+                border-radius: 0.5rem;
+                border: 1px solid white;
+                width: 7rem;
+                height: 2.5rem;
+    
+    
+                &:nth-child(1) {
+                    background-color: #ffffff;
+                    color: rgb(0, 0, 0);
+                    border : 1px solid #003145;
+                }
+    
+                &:nth-child(2) {
+                    background-color: #d40c0c;
+                    color: white;
+                }
+            }
+            
+        }
    
+    }
