local storage added and bug handling

--- a/hackers-guild/src/components/upload-submission-form/upload-submission-form.styles.scss
+++ b/hackers-guild/src/components/upload-submission-form/upload-submission-form.styles.scss
@@ -41,6 +41,7 @@
                 padding:10px;
                 border: 1px solid #E0E0E0;
                 border-radius: 5px;
+                resize: none;
             }
         }
         .upload-submission-form-hackathon-date{
